--- a/display-exercise.html
+++ b/display-exercise.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>CSS Layout Exercises | display property</title>
-  <meta charset="utf-8" name="description" content="Layout exercise on `display` property for Thinkful's front end web development course">
+	<head>
+	<title>CSS Layout Exercises | display property</title>
+	<meta charset="utf-8" name="description" content="Layout exercise on `display` property for Thinkful's front end web development course">
 
-  <!-- fonts  -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<!-- fonts  -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-  <!-- reset -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+	<!-- reset -->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
 
-  <!-- styles -->
-  <link rel="stylesheet" type="text/css" href="styles/main.css">
-  <!-- your styles will go in display-page.css -->
-  <link rel="stylesheet" type="text/css" href="styles/display-page.css">
-</head>
-<body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
-</body>
+	<!-- styles -->
+	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<!-- your styles will go in display-page.css -->
+	<link rel="stylesheet" type="text/css" href="styles/display-page.css">
+	</head>
+	<body>
+	<!-- your HTML here to implement the colored box design -->
+		<main>
+			<div class="block-container">
+				<div class="div-top green"></div>
+				<div class="div-top blue"></div>
+				<div class="div-bottom gray"></div>
+				<div class="div-bottom black"></div>
+				<div class="div-bottom orange"></div>
+			</div>
+		</main>
+	</body>
 </html>
